--- a/V2rayNG/gradle.properties
+++ b/V2rayNG/gradle.properties
@@ -21,3 +21,4 @@ compileSdkVer=27
 kotlin.incremental=true
 targetSdkVer=27
 firebaseVersion=11.6.0
+org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
